apps/seafile/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seafile
  namespace: seafile
spec:
  ports:
    - port: 80
      targetPort: http
      name: http
  selector:
    app: seafile
