apps/seafile/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile-internal
  namespace: seafile
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`files.internal.fferrando.cc`)
      kind: Rule
      services:
        - name: seafile
          port: 80
  tls:
    secretName: seafile-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: seafile-public
  namespace: seafile
spec:
  entryPoints:
    - cf-public
  routes:
    - match: Host(`files.fferrando.cc`)
      kind: Rule
      services:
        - name: seafile
          port: 80
